--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.elemental</groupId>
-    <artifactId>ElementalBattlepassTracker</artifactId>
-    <version>1.0.0</version>
+    <artifactId>ElementalMCBattlepass</artifactId>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -72,8 +72,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
 
