--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </repositories>
 
     <dependencies>
-        <!-- Paper API - The ONLY required dependency -->
+        <!-- Paper API -->
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
@@ -33,7 +33,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- HikariCP - Database connection pooling (INCLUDED in JAR) -->
+        <!-- HikariCP -->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
@@ -41,7 +41,7 @@
             <scope>compile</scope>
         </dependency>
 
-        <!-- MySQL Connector (INCLUDED in JAR) -->
+        <!-- MySQL Connector -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
@@ -52,6 +52,7 @@
 
     <build>
         <finalName>${project.name}-${project.version}</finalName>
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -60,7 +61,7 @@
         </resources>
 
         <plugins>
-            <!-- Java Compiler Plugin -->
+            <!-- Compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -71,7 +72,16 @@
                 </configuration>
             </plugin>
 
-            <!-- Shade Plugin - Bundles HikariCP and MySQL driver into JAR -->
+            <!-- Skip default JAR since Shade will produce the final one -->
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+            <!-- Shade plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -83,13 +93,11 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <!-- Replace default JAR with shaded one -->
                             <shadedArtifactAttached>false</shadedArtifactAttached>
-
-                            <!-- Prevent generating dependency-reduced-pom.xml -->
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <finalName>${project.build.finalName}</finalName>
 
-                            <!-- Relocate HikariCP to avoid conflicts -->
+                            <!-- Relocate HikariCP -->
                             <relocations>
                                 <relocation>
                                     <pattern>com.zaxxer.hikari</pattern>
@@ -97,7 +105,7 @@
                                 </relocation>
                             </relocations>
 
-                            <!-- Remove signatures to avoid issues -->
+                            <!-- Remove signatures -->
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
