--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.4.1</version>
                 <configuration>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
             </plugin>
 
@@ -93,7 +93,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <originalArtifactAttached>false</originalArtifactAttached>
+                            <shadedArtifactAttached>false</shadedArtifactAttached>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <finalName>${project.build.finalName}</finalName>
 
